# nton

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.bat  make.bat  make.sh  pyinstaller.py  pyproject.toml  sdl-hello.nro  setup.iss
.github/workflows/: cd.yml  ci.yml
exefs/: main  main.npdm
nton/: __main__.py  constants.py  helpers.py  main.py  nstool.py  system_title_ids.py  title_ids.py
nton/assets/: control.nacp.xml  game_title_ids.json
nton/assets/exefs/: main  main.npdm
nton/gui/: __init__.py  logger.py  main.py  main.ui  resources.py  widgets.py
nton/gui/resources/: icons.qrc  icons_rc.py  make.bat
rom/: LICENSE.md  Makefile  README.md  hbl.json
rom/source/: main.c
