[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nton"
description = "Nintendo Switch NRO to NSP Forwarder."
authors = [{ email = "rlaphoenix@pm.me" }]
requires-python = ">=3.9"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["nintendo", "switch", "homebrew", "forwarder"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "click~=8.1.8",
    "requests~=2.32.5",
    "jsonpickle~=4.1.1",
    "coloredlogs~=15.0.1",
    "beautifulsoup4~=4.14.3",
    "lxml~=6.0.2",
    "pillow~=11.3.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/rlaphoenix/nton"
Issues = "https://github.com/rlaphoenix/nton/issues"
Discussions = "https://github.com/rlaphoenix/nton/discussions"
Changelog = "https://github.com/rlaphoenix/nton/blob/master/CHANGELOG.md"

[project.optional-dependencies]
gui = ["PySide6-Essentials~=6.10.1"]
dev = ["pyinstaller~=6.18.0"]

[project.scripts]
nton = "nton.main:main"

[tool.hatch.version]
path = "nton/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = [
  "nton/gui/resources",
]
